# generalized_hough

./: .coverage  .flake8  .python-version  README.md  generalized_hough.ipynb  generalized_hough.py  mypy.ini  noxfile.py  pyproject.toml  tests.ipynb  xui.ipynb
docs/: conf.py
docs/_build/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  license.doctree  reference.doctree
docs/_build/_sources/: reference.rst.txt
src/generalized_hough/: generalized_hough.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
