[tool.poetry]
name = "generalized-hough"
version = "0.1.0"
description = "The hypermodern Mikhalina Python project"
authors = ["Mikhalina Kharkevich <mikhalinakharkevich@mail.ru>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Mikholen/generalized_hough"
repository = "https://github.com/Mikholen/generalized_hough"
keywords = ["hough"]


[tool.poetry.dependencies]
python = "^3.8.1"
click = "^8.0"
requests = "^2.31.0"
matplotlib = "^3.7"
desert = "^2022.9.22"
marshmallow = "^3.21.2"

[tool.poetry.scripts]
generalized-hough = "generalized_hough.console:main"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
coverage = "^7.5.1"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
black = "^24.4.2"
flake8 = "^7.0.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^24.4.26"
flake8-import-order = "^0.18.2"
safety = "^3.2.0"
mypy = "^1.10.0"
pytype = {version = "^2024.4.11", python = "3.8"}
typeguard = "^4.2.1"
flake8-annotations = "^3.1.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["generalized_hough"]

[tool.coverage.report]
show_missing = true
fail_under = 10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
